objects/CSC_Email_Filter__mdt.object
<CustomObject>
    <description>RN - CloudSmiths
List of email filters</description>
    <fields>
        <fullName>Flag_As__c</fullName>
        <label>Flag As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flag as Spam / Junk</fullName>
                    <default>true</default>
                    <label>Flag as Spam / Junk</label>
                </value>
                <value>
                    <fullName>Flag as Out of Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Flag as Duplicate</fullName>
                </value>
                <value>
                    <fullName>No Case Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Email_Address__c</fullName>
        <label>From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Text_In_Subject_Line__c</fullName>
        <label>Text In Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSC Email Filter</label>
    <listViews>
        <fullName>Detailed_View</fullName>
        <columns>MasterLabel</columns>
        <columns>From_Email_Address__c</columns>
        <columns>Flag_As__c</columns>
        <columns>Text_In_Subject_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View</label>
    </listViews>
    <pluralLabel>CSC Email Filters</pluralLabel>
</CustomObject>